v{ModVersion} has been published to {tMLBuildPurpose} tML v{tMLVersion}.

Additions
=========
* Challenge the Queen Slime and the Party Girl using Snow-themed decks!
  * Must defeat Wall of Flesh deck before dueling Party Girl