@@ -27,12 +27,13 @@ following NPCs:
 After defeating the Wall of Flesh in card-based combat (see below), the following NPCs
 may also be challenged:
 - the Party Girl
+- the Zoologist
 
 Beating an NPC's initial deck will unlock a more challenging deck for that opponent!
 
 Grow your Collection!
 ---------------------
-All 100 TerraTCG cards can be obtained by opening packs rewarded by beating NPCs or
+All 100+ TerraTCG cards can be obtained by opening packs rewarded by beating NPCs or
 bosses in a game! Each pack has a 1-in-15 chance to upgrade a card to a rare foil
 variant!
 
