@@ -35,6 +35,7 @@ After defeating the Wall of Flesh in card-based combat (see below), the followin
 may also be challenged:
 [list]
 [*] the Party Girl
+[*] the Zoologist
 [/list]
 
 
